<resources>
    <string name="app_name">Inspi</string>
    <string name="button_connection">Connect to a device</string>
    <string name="button_camera">Use camera</string>
    <string name="button_memo">Create memo</string>
    <string name="button_picture_gallery">Your picture gallery</string>
    <string name="button_memo_gallery">Your memo gallery</string>

    <string name="text_memo">Empty</string>
    <string name="text_memo_title">Empty</string>
    <string name="button_save">Save</string>

    <string name="button_discover">Scan for devices</string>
    <string name="button_discoverability">Activate discoverability</string>
    <string name="textView_devices">Please press Discover</string>
    <string name="button_connect">Connect</string>
    <string name="editText_mac">MAC-Address</string>
    <string name="editText_title">File title</string>

    <string name="text_memo_name">Empty</string>
    <string name="button_open">Open</string>
    <string name="textView_memo">Please write a name and press Open.</string>
    <string name="button_delete">Delete</string>
    <string name="button_edit">Edit</string>
    <string name="editText_memo">Please write a name and press Open</string>
    <string name="button_gallery_save">Save</string>

    <string name="imageView_create_picture"/>
    <string name="plainText_create_picture">Empty</string>
    <string name="button_save_create_picture">Save</string>
    <string name="button_rec_create_picture">Rec</string>

    <string name="imageView_picture_gallery"/>
    <string name="editText_picture_gallery">Empty</string>
    <string name="button_open_picture_gallery">Open</string>
    <string name="textView_picture_gallery">Type a picture name and press Open</string>
    <string name="button_delete_picture_gallery">Delete</string>
    <string name="textView_show_picture_gallery"/>
    <string name="editText_rename_picture_gallery">Empty</string>
    <string name="button_cancel_picture_gallery">Cancel</string>
</resources>